--- a/option.html
+++ b/option.html
@@ -58,6 +58,7 @@
             <div>
             	<div class="value">
 	            	<button id="save" class="saveButton">Save</button>
+                    <img src="wait.gif" width="32px" id="wait-gif" >
 	            </div>
 	            <div class="clear"></div>
 	            <div>
