--- a/option.html
+++ b/option.html
@@ -75,8 +75,8 @@
         <div id="footer">
             <div id="left">Copyright &copy; 2013 <a href="http://www.umich.edu/~jiaxiluo">Jiaxi Luo</a></div>
             <div id="right">
-                <!-- <a href=""><strong></strong></a> |
-                <a href=""></a> -->
+                <a href="http://www-personal.umich.edu/~jiaxiluo/sakai_plus/"><strong>More Information about Sakai Plus</strong></a>
+                <!-- <a href=""></a> -->
             </div>
             <div class="clear"></div>
         </div>
