--- a/option.html
+++ b/option.html
@@ -41,7 +41,7 @@
                 <div class="clear"></div>
             </div>
 
-            <div class="option">
+            <!-- <div class="option">
                 <div class="info">
                     <div class="title">Show Notifications</div>
                     <div class="description">Do you want to see notifications about new annoucements?</div>
@@ -53,7 +53,7 @@
                     </select>
                 </div>
                 <div class="clear"></div>
-            </div>
+            </div> -->
 
             <div>
             	<div class="value">
@@ -73,7 +73,7 @@
         </div>
 
         <div id="footer">
-            <div id="left">Copyright &copy; 2013 <a href="http://www.umich.edu/~jiaxiluo">Jiaxi Luo</a></div>
+            <div id="left">Copyright &copy; 2013 <a href="http://www-personal.umich.edu/~jiaxiluo">Jiaxi Luo</a></div>
             <div id="right">
                 <a href="http://www-personal.umich.edu/~jiaxiluo/sakai_plus/"><strong>More Information about Sakai Plus</strong></a>
                 <!-- <a href=""></a> -->
